attempt 2 of trying to fix a bug on safari browser

--- a/aggred/static/webdev_business/css/templatemo-style.css
+++ b/aggred/static/webdev_business/css/templatemo-style.css
@@ -438,7 +438,7 @@ figure.effect-honey:hover h2 i {
 
 #contact {
     color: white;
-    background-image: url(../img/the-town-bg-02.jpg);
+    background-image: url(../img/the-town-bg-02.png);
     /* background-position: center; */
     background-repeat: no-repeat;
     min-height: 850px;
